--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -6,10 +6,6 @@ on:
   pull_request:
     branches: [ main ]
 
-defaults:
-  run:
-    working-directory: wedigit-rest
-
 jobs:
   build:
 
@@ -28,7 +24,8 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r ..\requirements.txt
+        pip install -r requirements.txt
     - name: Run Tests
       run: |
         python manage.py test
+      working-directory: wedigit-rest
