--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -26,6 +26,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Run Tests
+      env: 
+          SECRET_KEY: ${{ secrets.SECRET_KEY }}
+          GITHUB_WORKFLOW: 1
       run: |
         python manage.py test
       working-directory: wedigit_rest
