--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,4 +19,7 @@ jobs:
             cd backend
             git pull origin main
             git status
+            docker-compose -f docker-compose.prod.yml up -d --build
+            docker-compose -f docker-compose.prod.yml exec web python manage.py migrate --noinput
+
 
