--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,9 @@ djangorestframework-simplejwt==4.6.0
 environ==1.0
 et-xmlfile==1.0.1
 lml==0.1.0
+numpy==1.20.1
 openpyxl==3.0.7
-pandas
+pandas==1.2.3
 pyexcel==0.6.6
 pyexcel-io==0.6.4
 pyexcel-webio==0.1.4
@@ -19,5 +20,4 @@ six==1.15.0
 sqlparse==0.4.1
 texttable==1.6.3
 xlrd==2.0.1
-psycopg2-binary
-gunicorn
+gunicorn==20.0.4
